// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prepare time series transformer should handle long to multi 1`] = `
[
  {
    "fields": [
      {
        "config": {},
        "name": "time",
        "type": "time",
        "values": [
          1,
          2,
          3,
        ],
      },
      {
        "config": {},
        "labels": {
          "sensor": "a",
        },
        "name": "speed",
        "type": "number",
        "values": [
          4,
          6,
          8,
        ],
      },
    ],
    "length": 3,
    "meta": {
      "type": "timeseries-multi",
    },
    "name": undefined,
    "refId": "A",
  },
  {
    "fields": [
      {
        "config": {},
        "name": "time",
        "type": "time",
        "values": [
          1,
          2,
          3,
        ],
      },
      {
        "config": {},
        "labels": {
          "sensor": "b",
        },
        "name": "speed",
        "type": "number",
        "values": [
          5,
          7,
          9,
        ],
      },
    ],
    "length": 3,
    "meta": {
      "type": "timeseries-multi",
    },
    "name": undefined,
    "refId": "A",
  },
]
`;

exports[`Prepare time series transformer should handle long to wide 1`] = `
[
  {
    "fields": [
      {
        "config": {},
        "labels": {
          "sensor": "a",
        },
        "name": "time",
        "state": {
          "origin": {
            "fieldIndex": 0,
            "frameIndex": 0,
          },
        },
        "type": "time",
        "values": [
          1,
          2,
          3,
        ],
      },
      {
        "config": {},
        "labels": {
          "sensor": "a",
        },
        "name": "speed",
        "state": {
          "origin": {
            "fieldIndex": 1,
            "frameIndex": 0,
          },
        },
        "type": "number",
        "values": [
          4,
          6,
          8,
        ],
      },
      {
        "config": {},
        "labels": {
          "sensor": "b",
        },
        "name": "speed",
        "state": {
          "origin": {
            "fieldIndex": 1,
            "frameIndex": 1,
          },
        },
        "type": "number",
        "values": [
          5,
          7,
          9,
        ],
      },
    ],
    "length": 3,
    "meta": {
      "type": "timeseries-wide",
    },
  },
]
`;

exports[`Prepare time series transformer should transform to flat time series 1`] = `
[
  {
    "fields": [
      {
        "config": {},
        "labels": undefined,
        "name": "time",
        "type": "time",
        "values": [
          1,
          1,
          2,
          2,
          3,
          3,
        ],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "foo",
        "type": "string",
        "values": [
          "bar",
          "bar",
          "bar",
          "bar",
          "bar",
          "bar",
        ],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "sensor",
        "type": "string",
        "values": [
          "a",
          "b",
          "a",
          "b",
          "a",
          "b",
        ],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "Variable",
        "type": "string",
        "values": [
          "speed",
          "speed",
          "speed",
          "speed",
          "speed",
          "speed",
        ],
      },
      {
        "config": {},
        "labels": undefined,
        "name": "Value",
        "type": "number",
        "values": [
          4,
          5,
          6,
          7,
          8,
          9,
        ],
      },
    ],
    "meta": {
      "type": "timeseries-long",
    },
    "name": undefined,
    "refId": "A",
  },
]
`;
